SERVER-6705 disable FPO for 3 routines, enable logging in test.exe

Turn off "frame pointer omission/optimization" for three routines,
make msgasserted use normal log() instead of tlog(), which is
suppressing output due to tlogLevel == -1 in framework.cpp.